# fc_pmr_search

./: .gitignore  README.md  pyproject.toml  run_sckan2pmr.py
pmrsearch/: __init__.py  __main__.py  setup.py
pmrsearch/indexer/: __init__.py  clusterer.py  ontology_crawler.py  pmr_crawler.py  sckan_crawler.py
pmrsearch/resources/: listOfWorkspace.json  metadata.schema.json  sckan2pmr.schema.json
pmrsearch/searcher/: __init__.py
tools/: build_cluster.py  build_index.py  crawl_pmr.py  crawl_sckan.py  create_sckan2pmr.py  evaluate.py  explore_exposure.py  generate_fc2pmr.py  run_cluster.py  test.py  validate_json.py  zip_sckan2pmr.py
