[tool.poetry]
name = "pmrsearch"
version = "0.0.1"
description = "Find all models in the PMR based on model terms in FC"
authors = ["Yuda Munarko <yuda.munarko@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sentence-transformers = "^2.2.2"

[tool.poetry.scripts]
pmrsearch = 'pmrsearch.__main__:main'
