[tool.poetry]
name = "pmrsearch"
version = "0.0.2"
description = "Find all models in the PMR based on model terms in FC and SCKAN"
authors = ["Yuda Munarko <yuda.munarko@auckland.ac.nz>"]
include = [
    "pmrsearch/searcher/indexes/sckan.pt",
    "pmrsearch/searcher/indexes/search_data.pt",
    "pmrsearch/workspaces/.keep"
]
exclude = [
    "pmrsearch/workspaces/*"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sentence-transformers = "3.0.0"
pandas = "2.1.0"
beautifulsoup4 = "^4.12.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
nmslib = {url = "https://idealoom.org/wheelhouse/nmslib-2.1.1-cp310-cp310-macosx_12_0_arm64.whl"}
lxml = "^4.9.3"
scikit-learn = "1.1.2"
en-core-sci-lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_lg-0.5.4.tar.gz"}
scispacy = "0.5.4"
hdbscan = "^0.8.36"
gitpython = "^3.1.43"
xmltodict = "^0.13.0"
jsonschema = "^4.22.0"
mapknowledge = {url = "https://github.com/AnatomicMaps/map-knowledge/releases/download/v0.18.1/mapknowledge-0.18.1-py3-none-any.whl"}

[tool.poetry.scripts]
pmrsearch = 'pmrsearch.__main__:main'
